@@ -1,5 +1,8 @@
 2011-03-29  Jason Merrill  <jason@redhat.com>
 
+	* call.c (reference_binding): Allow direct binding to an array
+	rvalue.
+
 	* pt.c (build_non_dependent_expr): Keep dereferences outside the
 	NON_DEPENDENT_EXPR.
 
